# langchain_project

./: 1a_rag.py  1b_rag.py  2a_rag.py  chain1.py  chain_parallel.py  chan_branch.py  langchain_helper.py  main.py  pyproject.toml
Book/: document.pptx
db/chroma_db/: chroma.sqlite3
